# .github

./: .gitignore  CMakeLists.txt  Engineering-Baseline.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: Command-System.md  Data-Flow.md  Module-Dependency-Graph.md  README.md  System-Architecture.md  Threading-Model.md  Timeline-State-Model.md  UI-Integration-Architecture.md  index.md
docs/guides/: DEVELOPMENT_PHILOSOPHY.md  DOC_DEPTH_STANDARD.md
docs/handoffs/: midas-current-status-handoff.md
include/audio-engine/: Device.h  Transport.h
include/midas-core/: Facade.h
include/mixer-engine/: Domain.h
include/shared-contracts/: Primitives.h
profile/: README.md
zip-snapshots/: SNAPSHOT-MANIFEST.md
